# omni-dev-agent

./: .github-config.env  .gitignore  BACKGROUND_PROCESSING_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP_PREREQUISITES.md  IDE_INTEGRATION_GUIDE.md  LICENSE  LLM_OVERLOAD_FEATURE_SUMMARY.md  PROJECT_SHOWCASE.md  README.md  SECURITY.md  SUPPORT.md  SYSTEM_INTEGRATION_GUIDE.md  TESTING.md  auto_github_setup.ps1  bootstrap.ps1  bootstrap.sh  bootstrap_simple.ps1  create_llm_dir.py  demo_background_processing.py  demo_free_tier_analysis.py  demo_ide_integration.py  demo_system_integration.py  free_tier_config.yaml  free_tier_project_config.yaml  free_tier_report_supabase.md  github_setup_simple.ps1  omni-dev-agent-technical-brief.md  pyproject.toml  quicksort.js  repo-config-sample.yaml  repos.yaml  requirements-dev.txt  requirements-setup.txt  requirements.txt  run_desktop_app.py  run_llm_demo.py  run_tests.bat  run_tests.py  (+11 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
docs/: LLM_OVERLOAD_HANDLER.md
docs_output/: .buildinfo  genindex.html  index.html  objects.inv  search.html
docs_source/: conf.py
notebooks/: 01_computer_vision_basics.ipynb  02_agent_development_tutorial.ipynb
reports/: free_tier_analysis_supabase_20250805_212341.json
scripts/: network_scan.py
service_cache/: known_services.json
src/: CAMERA_INTEGRATION_README.md  PERFORMANCE_OPTIMIZATION_README.md  VISION_ERROR_HANDLING_README.md  WEB_INTERFACE_README.md  __init__.py  benchmark_performance_optimization.py  (+12 more)
(+177 files in other folders)
